# chimitheque_front

./: Cargo.toml
locales/: en.yaml  fr.yaml
src/: api.rs  lib.rs  main.rs  promises.rs
src/api/: product.rs  storelocation.rs  userinfo.rs
src/error/: apperror.rs
src/ui/: app.rs  pages.rs  state.rs
src/ui/pages/main/: ui.rs
src/ui/pages/product/: list.rs
src/ui/pages/storelocation/: list.rs
