[package]
name = "chimitheque_front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chimitheque_types = { path = "../chimitheque_types" }
egui = "0.27.2"
eframe = "0.27.2"
egui_extras = { version = "0.27.2", features = ["svg", "all_loaders"]}
egui-aesthetix = { version = "0.2.3", features = ["all_themes"] }
env_logger = "0.11.3"
log = "0.4.21"
rust-i18n = "3"
poll-promise = "0.3.0"
ehttp = "0.5.0"
serde = "1.0.202"
serde_json = "1.0.117"
